# drones

./: .gitignore  README.md  SPEC.md  pixi.toml  pyproject.toml
.github/workflows/: main.yml
drone/: __init__.py  core.py  decorator.py
drone/broker/: __init__.py  redis.py
drone/serializer/: pickle.py
drones/: __init__.py  core.py  decorator.py  envelope.py
drones/broker/: __init__.py  redis.py
drones/serializer/: __init__.py  pickle.py
examples/: publisher.py  subscriber.py
tests/: fake_broker.py  test_drone.py
