[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone"
version = "0.1.0"
description = "Distributed Reactive Orchestration Nodes Environment"
requires-python = ">=3.13"
dependencies = [
    "atom>=0.10.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
