[build-system]
requires = ["hatchling>=1.21", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "drones"
dynamic = ["version"]
description = "Distributed Reactive Orchestration Nodes Environment"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Gabriel Reis", email = "gabrielcnr@gmail.com" }]
keywords = ["atom", "redis", "pubsub", "reactive", "distributed", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "atom>=0.10.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/gabrielcnr/drones"
Repository = "https://github.com/gabrielcnr/drones"
Issues = "https://github.com/gabrielcnr/drones/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "drones/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["drones"]

[tool.hatch.build.targets.sdist]
include = ["drones", "tests", "README.md", "LICENSE", "SPEC.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are expected in tests
"examples/*" = ["S311"]  # pseudo-random is fine for demo data

[tool.mypy]
python_version = "3.13"
files = ["drones"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Generated by hatch-vcs at build time; not present in a plain source checkout.
module = "drones._version"
ignore_missing_imports = true
